--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,27 @@
-requests==2.26.0
-pydantic==1.8.2
-SQLAlchemy==1.4.23
+aiofiles==0.6.0
+backports.entry-points-selectable==1.1.0
 beautifulsoup4==4.9.3
+certifi==2021.5.30
+charset-normalizer==2.0.4
+click==7.1.2
+distlib==0.3.2
 fastapi==0.68.1
-uvicorn == 0.12.3 
-aiofiles == 0.6.0 
-python-multipart == 0.0.5 
-jinja2 == 2.11.2
+filelock==3.0.12
+greenlet==1.1.1
+h11==0.12.0
+idna==3.2
+Jinja2==2.11.2
+lxml==4.6.3
+MarkupSafe==2.0.1
+platformdirs==2.3.0
+pydantic==1.8.2
+python-multipart==0.0.5
+requests==2.26.0
+six==1.16.0
+soupsieve==2.2.1
+SQLAlchemy==1.4.23
+starlette==0.14.2
+typing-extensions==3.10.0.2
+urllib3==1.26.6
+uvicorn==0.12.3
+virtualenv==20.7.2
